# Restaurant-Ordering-System-Sawt

./: .env.example  .gitignore  DESIGN.md  README.md  alembic.ini  app.py  docker-compose.yml  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 001_initial_schema.py
scripts/: index_menu.py  init-db.sql  reindex_pinecone.py  seed_areas.py  seed_menu.py  test_flow.py
src/sawt/: __init__.py  config.py  logging_config.py  main.py
src/sawt/agents/: __init__.py  base_agent.py  checkout_agent.py  greeter_agent.py  intent_agent.py  location_agent.py  orchestrator.py  order_agent.py  summarizer_agent.py
src/sawt/db/: __init__.py  connection.py
src/sawt/db/repositories/: __init__.py  coverage_repo.py  menu_repo.py  order_repo.py  promo_repo.py  session_repo.py
src/sawt/graph/: __init__.py  state.py  workflow.py
src/sawt/llm/: __init__.py  openrouter_client.py
src/sawt/llm/prompt_templates/: __init__.py  base.py  checkout.py  greeter.py  location.py  order.py  summarizer.py
src/sawt/mcp_server/: __init__.py  server.py
src/sawt/mcp_server/tools/: __init__.py  cart_validation.py  order.py  (+5 more)
src/sawt/state/: __init__.py  machine.py  session_state.py
src/sawt/tools/: __init__.py  checkout_tools.py  location_tools.py  menu_tools.py  order_tools.py
src/sawt/utils/: __init__.py  arabic_utils.py  numeral_converter.py  time_utils.py  validators.py
src/sawt/vector/: __init__.py  embeddings.py  menu_indexer.py  pinecone_client.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_numeral_converter.py  test_state_machine.py
